[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "NVLMT"
version = "0.1"
description="change"
keywords=["deep learning", "NVLM-D-72B", "multi-modal"]
dependencies = [
  "numpy", "tqdm", "Pillow", "torch", "transformers"
]

[tool.setuptools.packages.find]
where=["./"]
include=["*"]